# WordGame

./: CMakeLists.txt  README.md
assets/: compute_perish_rate.py  foodData.py  foodData.xlsx  itemData.py  itemData.xlsx
include/common/: constant.h  types.h  utities.h
include/core/: engine.h  lua_manager.h  pool.h  register.h  system.h  world.h
include/entities/: basic.h  body.h  cmd.h  combat.h  item.h  map.h  world_time.h
include/factories/: item_factory.h
scripts/: item_config.lua  travel_events.lua
src/: main.cc
src/core/: engine.cc  lua_manager.cc  register.cc  system.cc  world.cc
src/entities/: combat.cc  item.cc
src/factories/: item_factory.cc
